Server configuration fixed, security manager related things removed, deprecated